tests/kiama/negative/name_errors/L1/5_type2.ob
MODULE type;

TYPE
    atype2 = INTEGER;
    atype2 = BOOLEAN;

END type.
